fix: fee amount spacing

--- a/src/blocks/donate/streamlined.scss
+++ b/src/blocks/donate/streamlined.scss
@@ -144,3 +144,7 @@
 		}
 	}
 }
+
+#stripe-fees-amount {
+	padding-left: 3px;
+}
